Changes: Add application menu background-tiles for menuitems, fix text color RevBy: TrustMe Details: oops, had wrong color for text in RD theme, fixed. Also added background-tiles for menu items

--- a/base/meegotouch/libmeegotouchviews/style/mapplicationmenustyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mapplicationmenustyle.css
@@ -119,18 +119,30 @@ MApplicationMenu MComboBoxStyle
     content-item-object-name: "menuactioncommand";
 }
 
+MApplicationMenu MListItemStyle {
+    background-tiles: meegotouch-viewmenu-background $CORNER_MARGINS;
+}
+
+MApplicationMenu MListItemStyle:selected {
+    background-tiles: meegotouch-viewmenu-background-selected $CORNER_MARGINS;
+}
+
+MApplicationMenu MListItemStyle:pressed {
+    background-tiles: meegotouch-viewmenu-background-pressed $CORNER_MARGINS;
+}
+
 /* text labels in application menu items */
 MApplicationMenu MLabelStyle#CommonSingleTitle {
     /* regular menu entries */
-   color: $COLOR_INVERTED_FOREGROUND;
+   color: $COLOR_FOREGROUND;
 }                                                                                          
 
 MApplicationMenu MLabelStyle#CommonTitle {
     /* menu entries that are a combobox */
-    color: $COLOR_INVERTED_FOREGROUND;
+    color: $COLOR_FOREGROUND;
 }
 
 MApplicationMenu MLabelStyle#CommonSubTitle {
     /* combobox secondary line of text */
-    color: $COLOR_INVERTED_SECONDARY_FOREGROUND;
+    color: $COLOR_SECONDARY_FOREGROUND;
 }
